[workspace]
resolver = "3"
members = [
  "auth-core",
  "auth-application-credential",
  "auth-federation",
  "auth-jwt",
  "auth-multifactor",
  "auth-oidcaccesstoken",
  "auth-passkey",
  "auth-password",
  "auth-receipt",
  "auth-token",
  "auth-totp",
  "auth-websso",
  "sdk-core",
  "openstack_sdk",
  "openstack_cli",
  "openstack_tui",
  "openstack_types",
  "xtask",
  "fuzz", "cli-core", 
]
default-members = ["openstack_cli", "openstack_sdk", "openstack_tui", "openstack_types"]

[workspace.package]
license = "Apache-2.0"
edition = "2024"
authors = ["Artem Goncharov (gtema)"]
rust-version = "1.88"  # MSRV
homepage = "https://github.com/gtema/openstack"
repository = "https://github.com/gtema/openstack"

[workspace.dependencies]
async-trait = { version = "^0.1" } #, optional = true }
base64 = "0.22"
bytes = "^1.11"
chrono = { version = "^0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "^4.6", features = ["cargo", "color", "derive", "env"] }
clap_complete = { version = "^4.6", features = ["unstable-dynamic"] }
color-eyre = { version = "^0.6", features = ["default", "issue-url", "track-caller"] }
config = { version = "^0.15", default-features = false }
derive_builder = { version = "^0.20" }
dialoguer = "^0.12.0"
dirs = "^6.0"
eyre = { version = "^0.6" }
form_urlencoded = "^1.2"
futures = "^0.3"
futures-util = { version = "^0.3", default-features = false}
http = "^1.4"
http-body-util = "^0.1"
httpmock = { version = "0.8" }
hyper = { version = "^1.8" }
hyper-util = { version = "^0.1" }
inventory = { version = "0.3" }
itertools = { version = "^0.14" }
json-patch = { version = "^4.1" }
lazy_static = { version = "^1.5" }
open = { version = "^5.3" }
regex = { version = "^1.12" }
reqwest = { version = "^0.13", features = ["blocking", "stream", "rustls"], default-features = false }
reserve-port = "^2.4"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version="^1.0", features=["derive"] }
serde_json = "^1.0"
serde_bytes = "^0.11"
serde_urlencoded = "^0.7"
strip-ansi-escapes = "^0.2"
structable = { version = "^0.3" }
tempfile = "^3.27"
tokio = { version = "^1.50", features = ["fs", "macros", "net", "sync", "rt-multi-thread", "io-std", "signal"]}
tokio-util = { version="^0.7", features = ["io", "compat"]}
thiserror = { version = "^2.0" }
tracing = "^0.1"
tracing-error = { version = "^0.2" }
tracing-subscriber = { version = "^0.3", features = ["env-filter", "serde"] }
tracing-test = { version = "^0.2" }
url = { version = "^2.5", features = ["serde"] }
webauthn-authenticator-rs = { version = "0.5", features = ["ctap2", "mozilla", "ui-cli"]}
webauthn-rs-proto = { version = "0.5" }

[profile.dev]
debug = 0

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.lints.clippy]
result_large_err = "allow"
unwrap_used = "deny"
expect_used = "deny"
enum_glob_use = "deny"
