[workspace]
resolver = "3"
members = [
  "cli/*",
  "openstack_sdk",
  "openstack_cli",
  "openstack_tui",
  "openstack_types",
  "sdk/*",
  "xtask",
  "fuzz",
  "types/*",
]
# webauthn-rs should not land in the default members since it pulls openssl that
# is not available for alpine
default-members = [
  "cli/*",
  "sdk/auth-core",
  "sdk/auth-application-credential",
  "sdk/auth-multifactor",
  "sdk/auth-oidcaccesstoken",
  "sdk/auth-oidcclientcredentials",
  "sdk/auth-password",
  "sdk/auth-receipt",
  "sdk/auth-totp",
  "sdk/auth-websso",
  "sdk/core",
  "sdk/block-storage",
  "sdk/container-infrastructure-management",
  "sdk/compute",
  "sdk/dns",
  "sdk/identity",
  "sdk/image",
  "sdk/load-balancer",
  "sdk/network",
  "sdk/object-store",
  "sdk/placement",
  "types/*",
  "openstack_*"
]

[workspace.package]
license = "Apache-2.0"
edition = "2024"
authors = ["Artem Goncharov (gtema)"]
rust-version = "1.89"  # MSRV
homepage = "https://github.com/gtema/openstack"
repository = "https://github.com/gtema/openstack"

[workspace.dependencies]
arc-swap = "1.7"
async-trait = { version = "^0.1" }
base64 = "0.22"
bytes = "^1.12"
chrono = { version = "^0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "^4.6", features = ["cargo", "color", "derive", "env"] }
clap_complete = { version = "^4.6" }
color-eyre = { version = "^0.6", features = ["default", "issue-url", "track-caller"] }
config = { version = "^0.15", default-features = false }
derive_builder = { version = "^0.20" }
dialoguer = "^0.12.0"
dirs = "^6.0"
eyre = { version = "^0.6" }
form_urlencoded = "^1.2"
futures = "^0.3"
futures-util = { version = "^0.3", default-features = false}
http = "^1.4"
http-body-util = "^0.1"
httpmock = { version = "0.8" }
hyper = { version = "^1.10" }
hyper-util = { version = "^0.1" }
inventory = { version = "0.3" }
itertools = { version = "^0.15" }
json-patch = { version = "^4.2" }
lazy_static = { version = "^1.5" }
open = { version = "^5.4" }
openstack-cli-api = { path="cli/api", version = "0.13.7" }
openstack-cli-auth = { path="cli/auth", version = "0.13.7" }
openstack-cli-block-storage = { path="cli/block-storage/", version = "0.13.7" }
openstack-cli-catalog = { path="cli/catalog/", version = "0.13.7" }
openstack-cli-compute = { path="cli/compute/", version = "0.13.7" }
openstack-cli-container-infrastructure-management = { path="cli/container-infrastructure-management/", version = "0.13.7" }
openstack-cli-core = { path="cli/core", version = "0.13.7" }
openstack-cli-dns = { path="cli/dns/", version = "0.13.7" }
openstack-cli-identity = { path="cli/identity/", version = "0.13.7" }
openstack-cli-image = { path="cli/image/", version = "0.13.7" }
openstack-cli-load-balancer = { path="cli/load-balancer/", version = "0.13.7" }
openstack-cli-network = { path="cli/network/", version = "0.13.7" }
openstack-cli-object-store = { path="cli/object-store/", version = "0.13.7" }
openstack-cli-placement = { path="cli/placement/", version = "^0.13" }
openstack-sdk-auth-core = { version = "0.22.6", path = "sdk/auth-core" }
openstack_sdk_core = { version = "0.22.7", path = "sdk/core" }
openstack_sdk = { version = "0.22.7", path = "openstack_sdk" }
openstack_types = { version = "0.22.7", path = "openstack_types" }
openstack-types-core = { version = "0.22", path = "types/core" }
pem = { version = "^3.0" }
regex = { version = "^1.13" }
rsa = { version = "^0.9", features = ["getrandom", "pkcs5"] }
ssh-key = { version = "^0.6", features = ["rsa", "encryption"] }
reqwest = { version = "^0.13", default-features = false }
reserve-port = "^2.5"
schemars = { version = "^1.2" }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version="^1.0", features=["derive"] }
serde_json = "^1.0"
serde_bytes = "^0.11"
serde_urlencoded = "^0.7"
sha2 = { version = "^0.11.0", default-features = false }
strip-ansi-escapes = "^0.2"
structable = { version = "^0.3" }
tempfile = "^3.27"
tokio = { version = "^1.52", default-features = false, features = ["macros"]}
tokio-util = { version="^0.7", features = ["io", "compat"]}
thiserror = { version = "^2.0" }
tracing = "^0.1"
tracing-error = { version = "^0.2" }
tracing-subscriber = { version = "^0.3", features = ["env-filter", "serde"] }
tracing-test = { version = "^0.2" }
url = { version = "^2.5", features = ["serde"] }
webauthn-authenticator-rs = { version = "0.5", features = ["ctap2", "mozilla", "ui-cli"]}
webauthn-rs-proto = { version = "0.5" }
uuid = { version = "1.23" }
zeroize = { version = "^1.9" }

[profile.dev]
debug = 0

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
# rust 1.96 use llvm 1.22 (bitcode) while Mac does not have support for it
lto = false
#lto = "thin"

[workspace.lints.clippy]
result_large_err = "allow"
unwrap_used = "deny"
expect_used = "deny"
enum_glob_use = "deny"
module_inception = "allow"

#[patch.crates-io]
#openstack-cli-core = {path = "./cli/core"}
#openstack_sdk_core = {path = "./sdk/core"}
