[package]
name = "openstack-sdk-auth-websso"
version = "0.22.5"
license.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
dialoguer.workspace = true
form_urlencoded.workspace = true
futures.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["full"] }
inventory.workspace = true
open.workspace = true
openstack-sdk-auth-core = { version = "0.22", path = "../auth-core" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
reqwest = { workspace = true, features = ["form"] }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
httpmock.workspace = true
reserve-port.workspace = true
tempfile.workspace = true
tracing-test.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
