[package]
name = "openstack_sdk-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.openstack_sdk]
path = "../openstack_sdk"

[[bin]]
name = "fuzz_openstack_sdk_config"
path = "fuzz_targets/fuzz_openstack_sdk_config.rs"
test = false
doc = false
bench = false
