[package]
name = "openstack_sdk-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
license = "Apache-2.0"
autobins = false
autoexamples = false
autotests = false
autobenches = false

[package.metadata]
cargo-fuzz = true

[features]
fuzzing = ["dep:libfuzzer-sys"]

[package.metadata.dist]
dist = false

[dependencies]
libfuzzer-sys = { version = "0.4", optional = true }

[dependencies.openstack_sdk]
path = "../openstack_sdk"

[[bin]]
name = "fuzz_openstack_sdk_config"
path = "fuzz_targets/fuzz_openstack_sdk_config.rs"
required-features = ["fuzzing"]
test = false
doc = false
bench = false
