[package]
name = "openstack_cli"
version = "0.13.5"
authors = [
    "Artem Goncharov (gtema)",
]
description = "OpenStack client rewritten in Rust"
categories = ["command-line-interface"]
edition.workspace = true
rust-version.workspace = true # MSRV
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
bench = false

[[bin]]
name = "osc"
path = "src/bin/osc.rs"
test = false
bench = false

[features]
default = [
  "openstack_sdk/async",
  "block_storage",
  "compute",
  "container_infra",
  "dns",
  "identity",
  "image",
  "load_balancer",
  "network",
  "object_store",
  "placement",
]
block_storage = []
compute = []
container_infra = []
dns = []
identity = []
image = ["openstack_sdk/image"]
load_balancer = []
network = []
object_store = []
placement = []
keystone_ng = ["openstack-cli-identity/keystone_ng"]
passkey = ["openstack-cli-identity/passkey"]

_test_admin = []
_test_net_auto-allocated-topology = []
_test_net_dhcp_agent_scheduler = []
_test_net_l3_agent_scheduler = []
_test_net_local_ips = []
_test_net_logging = []
_test_net_network-ip-availability = []
_test_net_network-segment-range = []
_test_net_vpn = []

[dependencies]
clap = { workspace = true, features = ["color", "derive", "env"] }
clap_complete = { workspace = true }
color-eyre = { workspace = true }
dialoguer = { workspace = true, features=["fuzzy-select"] }
eyre = { workspace = true }
openstack-cli-api = { path="../cli-cmd/api", version = "^0.1" }
openstack-cli-auth = { path="../cli-cmd/auth", version = "^0.1" }
openstack-cli-block-storage = { path="../cli-cmd/block-storage/", version = "^0.1" }
openstack-cli-catalog = { path="../cli-cmd/catalog/", version = "^0.1" }
openstack-cli-compute = { path="../cli-cmd/compute/", version = "^0.1" }
openstack-cli-container-infrastructure-management = { path="../cli-cmd/container-infrastructure-management/", version = "^0.1" }
openstack-cli-core = { path="../cli-core", version = "^0.13" }
openstack-cli-dns = { path="../cli-cmd/dns/", version = "^0.1" }
openstack-cli-identity = { path="../cli-cmd/identity/", version = "^0.1" }
openstack-cli-image = { path="../cli-cmd/image/", version = "^0.1" }
openstack-cli-load-balancer = { path="../cli-cmd/load-balancer/", version = "^0.1" }
openstack-cli-network = { path="../cli-cmd/network/", version = "^0.1" }
openstack-cli-object-store = { path="../cli-cmd/object-store/", version = "^0.1" }
openstack-cli-placement = { path="../cli-cmd/placement/", version = "^0.1" }
openstack_sdk = { path="../openstack_sdk", version = "^0.22", default-features = false, features = ["async"] }
strip-ansi-escapes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true}
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "^2.2"
futures.workspace = true
http.workspace = true
md5 = "^0.8.0"
rand = "^0.10"
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[[test]]
name = "functional"
path = "tests/main.rs"
test = false

[lints]
workspace = true
