[package]
name = "openstack_cli"
version = "0.13.8"
authors = [
    "Artem Goncharov (gtema)",
]
description = "OpenStack client rewritten in Rust"
categories = ["command-line-interface"]
edition.workspace = true
rust-version.workspace = true # MSRV
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
bench = false

[[bin]]
name = "osc"
path = "src/bin/osc.rs"
test = false
bench = false

[features]
default = [
  "openstack_sdk/async",
  "block_storage",
  "compute",
  "container_infra",
  "dns",
  "identity",
  "image",
  "load_balancer",
  "network",
  "object_store",
  "placement",
]
block_storage = []
compute = []
container_infra = []
dns = []
identity = []
image = ["openstack_sdk/image"]
load_balancer = []
network = []
object_store = []
placement = []
keystone_ng = ["openstack-cli-identity/keystone_ng"]
passkey = ["openstack-cli-identity/passkey"]

_test_admin = []
_test_net_auto-allocated-topology = []
_test_net_dhcp_agent_scheduler = []
_test_net_l3_agent_scheduler = []
_test_net_local_ips = []
_test_net_logging = []
_test_net_network-ip-availability = []
_test_net_network-segment-range = []
_test_net_vpn = []

[dependencies]
clap = { workspace = true, features = ["color", "derive", "env"] }
clap_complete = { workspace = true, features = ["unstable-dynamic"] }
color-eyre = { workspace = true }
dialoguer = { workspace = true, features=["fuzzy-select"] }
eyre = { workspace = true }
openstack-cli-api.workspace = true
openstack-cli-auth.workspace = true
openstack-cli-block-storage.workspace = true
openstack-cli-catalog.workspace = true
openstack-cli-compute.workspace = true
openstack-cli-container-infrastructure-management.workspace = true
openstack-cli-core.workspace = true
openstack-cli-dns.workspace = true
openstack-cli-identity.workspace = true
openstack-cli-image.workspace = true
openstack-cli-load-balancer.workspace = true
openstack-cli-network.workspace = true
openstack-cli-object-store.workspace = true
openstack-cli-placement.workspace = true
openstack_sdk = { workspace = true, features = ["async"] }
strip-ansi-escapes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true}
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "^2.2"
futures.workspace = true
http.workspace = true
md5 = "^0.8.1"
rand = "^0.10"
reqwest.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[[test]]
name = "functional"
path = "tests/main.rs"
test = false

[lints]
workspace = true
