[package]
name = "openstack_sdk"
description = "OpenStack SDK"
version = "0.22.6"
keywords = ["api", "openstack"]
categories = ["api-bindings"]
authors = ["Artem Goncharov (gtema)"]
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = [
  "async",
  "sync",
  "block_storage",
  "compute",
  "container_infra",
  "dns",
  "identity",
  "image",
  "load_balancer",
  "network",
  "object_store",
  "placement"
]
block_storage = []
compute = []
container_infra = []
dns = []
identity = []
image = []
load_balancer = []
network = []
object_store = []
placement = []
sync = ["openstack_sdk_core/sync"]
async = ["openstack_sdk_core/async"]
client_der = []
client_pem = []
keystone_ng = []
passkey = ["keystone_ng", "openstack_sdk_core/passkey" ]

[dependencies]
async-trait.workspace = true
chrono.workspace= true
derive_builder.workspace = true
futures.workspace = true
http.workspace = true
json-patch.workspace = true
openstack_sdk_core = { path = "../openstack_sdk_core/", version = "^0.22" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
bytes.workspace = true
httpmock.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[test]]
name = "functional"
path = "tests/main.rs"
test = false

[[example]]
name = "query_find"
required-features = ["async", "compute"]

[[example]]
name = "paged"
required-features = ["async", "compute"]

[[example]]
name = "query"
required-features = ["async", "compute"]

[[example]]
name = "ignore"
required-features = ["async", "compute"]

[lints]
workspace = true
