[package]
name = "openstack_sdk"
description = "OpenStack SDK"
version = "0.22.6"
keywords = ["api", "openstack"]
categories = ["api-bindings"]
authors = ["Artem Goncharov (gtema)"]
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = [
  "async",
  "sync",
  "block_storage",
  "compute",
  "container_infra",
  "dns",
  "identity",
  "image",
  "load_balancer",
  "network",
  "object_store",
  "placement"
]
block_storage = []
compute = []
container_infra = []
dns = []
identity = []
image = []
load_balancer = []
network = []
object_store = []
placement = []
sync = ["openstack-sdk-core/sync"]
async = ["openstack-sdk-core/async"]
client_der = []
client_pem = []
keystone_ng = ["dep:openstack-sdk-auth-jwt", "dep:openstack-sdk-auth-federation"]
passkey = ["keystone_ng", "dep:openstack-sdk-auth-passkey"]
#keystone_ng = []
#passkey = ["keystone_ng", "openstack-sdk-core/passkey" ]

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace= true
derive_builder.workspace = true
dialoguer.workspace = true
futures.workspace = true
futures-util.workspace = true
http.workspace = true
json-patch.workspace = true
inventory.workspace = true
openstack-sdk-auth-applicationcredential = { version = "0.22", path = "../auth-application-credential/" }
openstack-sdk-auth-core = { version = "0.22", path = "../auth-core/" }
openstack-sdk-auth-federation = { version = "0.22", path = "../auth-federation/", optional = true }
openstack-sdk-auth-jwt = { version = "0.22", path = "../auth-jwt/", optional = true }
openstack-sdk-auth-oidcaccesstoken = { version = "0.22", path = "../auth-oidcaccesstoken/" }
openstack-sdk-auth-passkey = { version = "0.22", path = "../auth-passkey/", optional = true }
openstack-sdk-auth-websso = { version = "0.22", path = "../auth-websso/" }
openstack-sdk-core = { path = "../sdk-core/", version = "^0.22" }
reqwest = { workspace = true, features = ["gzip", "deflate", "form", "json", "http2",
  "socks", "system-proxy"] }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
bytes.workspace = true
httpmock.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-test.workspace = true

[[test]]
name = "functional"
path = "tests/main.rs"
test = false

[[example]]
name = "query_find"
required-features = ["async", "compute"]

[[example]]
name = "paged"
required-features = ["async", "compute"]

[[example]]
name = "query"
required-features = ["async", "compute"]

[[example]]
name = "ignore"
required-features = ["async", "compute"]

[lints]
workspace = true
