[package]
name = "openstack_tui"
description = "OpenStack Terminal User interface"
version = "0.12.3"
keywords = ["tui", "openstack"]
categories = ["command-line-utilities"]
authors = ["Artem Goncharov (gtema)"]
edition = "2024"
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version = "1.85" # MSRV

[lib]
bench = false

[[bin]]
name = "ostui"
path = "src/bin/ostui.rs"

[dependencies]
chrono = { workspace= true }
clap = { workspace = true, features = ["cargo", "derive", "env", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = { workspace = true }
config = { workspace = true, features = ["json", "json5", "yaml"] }
crossterm = { version = "^0.29", features = ["serde", "event-stream"] }
derive_builder = { workspace = true }
derive_deref = "^1.1"
dirs = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
json5 = "^0.4"
lazy_static = "^1.5"
open.workspace = true
openstack_sdk = { path = "../openstack_sdk", version = "^0.21", default-features = false, features = ["async", "block_storage", "compute", "dns", "identity", "image", "load_balancer", "network"] }
openstack_types = { path = "../openstack_types", version = "^0.21" }
pretty_assertions = "^1.4"
ratatui = { version = "^0.29", features = ["serde", "macros"] }
serde = { workspace = true  }
serde_json = { workspace = true }
serde_yaml = "^0.9"
signal-hook = "^0.3"
strip-ansi-escapes = "^0.2"
structable = { workspace = true }
strum = { version = "^0.27", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
url.workspace = true

[lints]
workspace = true
